<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PPT魔杖</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">使用偏好</string>
    <string name="title_activity_pair">连接电脑</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="action_pair">连接电脑</string>
    <string name="title_activity_preference">偏好设置</string>
    <string name="pref_title_screen_always_on">放映时保持屏幕常亮</string>
    <string name="pref_description_screen_always_on">建议开启，将会增加耗电量</string>
    <string name="pref_title_vibrate">交互设置</string>
    <string name="pref_title_vibrate_on">发出指令时震动手表</string>
    <string name="pref_title_sensor">“甩一甩”播放下一页</string>
    <string name="title_activity_splash">PPT魔杖</string>
    <string name="pref_title_sensor_intensity">灵敏度设置</string>
    <string name="pref_title_sensor_on">开启</string>
    <string name="pref_title_screen_on">屏幕常亮</string>

</resources>
